<resources>

    <!-- Hints -->
    <string name="description">Description…</string>
    <string name="hint_diary">Diary name…</string>
    <string name="hint_text_note">Text…</string>
    <string name="dialog_new_daily_list_hint">Name…</string>
    <string name="title">Title…</string>

    <!-- Toast messages -->
    <string name="add_favor">Added to Favorites</string>
    <string name="del_favor">Removed from Favorites</string>
    <!-- Permissions -->
    <string name="perm_granted">Permissions granted</string>
    <string name="perm_denied">Permissions denied</string>
    <string name="perm_denied_again">Enable permission in the settings</string>
    <string name="perm_one_more">Tap one more time</string>


    <!-- Main -->
    <string name="sample">Sample Text</string>
    <string name="list_name">Daily list</string>

    <string name="cancel_btn">Cancel</string>
    <string name="done_btn">Done</string>

    <string name="button_save">Save</string>
    <string name="photo_choose">Photo</string>
    <string name="color_choose">Color</string>
    <string name="photo_reset">Reset</string>
    <string name="search">Search</string>

    <string name="description_full">Description:</string>
    <string name="creation_date">Creation date: </string>
    <string name="last_edit_date">Last edit date: </string>
    <string name="amount_of_notes">Amount of notes: </string>

    <string name="max_image_attached">You can attach only 3 images</string>


    <!-- Dialog screen -->
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="dialog_delete">Delete</string>
    <string name="dialog_check_delete">Do you want to delete this diary?</string>
    <string name="dialog_check_delete_note">Do you want to delete this note?</string>

    <string name="dialog_save">Save changes</string>
    <string name="dialog_check_save_changes">Do you want to save changes?</string>

    <string name="dialog_leave_changes">Unsaved changes</string>
    <string name="dialog_check_leave">There are some unsaved changes. Do you want to close this window?</string>

    <string name="dialog_new_item">New thing</string>
    <string name="dialog_item_input_text">Enter something you want to do</string>

    <string name="dialog_clear_list_title">Clear the list</string>
    <string name="dialog_clear_list">Do you want to clear the list?</string>

    <string name="dialog_delete_voice_title">Delete voice note</string>
    <string name="dialog_delete_voice_message">Do you want to delete voice note? This cannot be undone.</string>

    <string name="dialog_color_choose_title">Choose color</string>

    <string name="dialog_edit_text">Enter a new name of your daily list</string>
    <string name="dialog_edit_daily_list_item_text">Enter a new name for daily list item</string>

    <string name="dialog_image_delete_message">Do you want to delete this image?</string>


    <!-- Settings -->
    <string name="categoryMainSettings">Main settings</string>
    <string name="categoryNotifications">Notifications</string>

    <string name="diary_image_in_note_title">Background image for note</string>
    <string name="diary_image_in_note_summary">Show diary image on the note background</string>

    <string name="show_color_diary_title">Show diaries color</string>
    <string name="show_color_diary_summary">You can choose color when create diaries</string>

    <string name="show_color_note_title">Show notes color</string>
    <string name="show_color_note_summary">You can choose color when create notes</string>

    <string name="show_images_in_list_note_title">Show notes with images</string>
    <string name="show_images_in_list_note_summary">Show attached images in the note list</string>

    <string name="clickable_image_title">Clickable images in notes list</string>
    <string name="clickable_image_summary">Click on image to open it in full size from notes list</string>

    <string name="open_last_diary_title">Start with last opened diary</string>
    <string name="open_last_diary_summary">When you enter the app the latest opened diary will be opened</string>

    <string name="rate_button">Rate this app on Play Market</string>

    <string name="enable_notifications">Enable notifications</string>
    <string name="notify_time">Set time for notifications</string>


    <!-- Menu buttons -->
    <string name="edit_btn">Edit</string>
    <string name="open_btn">Open</string>
    <string name="delete_btn">Delete</string>
    <string name="move_btn">Move to</string>
    <string name="show_info">Show info</string>
    <string name="hide_info">Hide info</string>
    <string name="bookmark">Add star</string>
    <string name="remove_bookmark">Remove star</string>

    <!-- Labels -->
    <string name="about_btn">About</string>
    <string name="settings_btn">Settings</string>
    <string name="app_name">Diary</string>
    <string name="notes_btn">Notes</string>
    <string name="new_note">New note</string>
    <string name="new_diary">New diary</string>
    <string name="edit_diary">Edit diary</string>
    <string name="clicked_note">Your note</string>

    <!-- Voice -->
    <string name="start_time">0:00</string>
    <string name="end_time">-1:11</string>
    <string name="no_voice_note">Tap on mic to start recording</string>

    <!-- ProgressBar -->
    <string name="progressbar_progress">of</string>
    <string name="progressbar_progress_empty">Add something to do</string>

    <!-- SnackBar -->
    <string name="snackbar_diary_delete">Diary has been deleted.</string>
    <string name="snackbar_note_delete">Note has been deleted.</string>
    <string name="snackbar_clear_list">List cleared.</string>
    <string name="snackbar_daily_list_item_delete">Item has been deleted.</string>
    <string name="snackbar_undo_btn">UNDO</string>
    <string name="snackbar_succeed">You have succeed!</string>

    <!-- Fragments -->
    <string name="fragment_notes">Notes</string>
    <string name="fragment_daily_list">Daily list</string>

    <!-- Other -->
    <string name="creators">Creator</string>
    <string name="robert">Robert Khakimov</string>
    <string name="app_ver">App version: 1.06</string>
    <string name="privacy_policy">Privacy policy link:</string>
    <string name="pp_link">https://diary-daily-list.flycricket.io/privacy.html</string>

    <!-- Error messages -->
    <string name="error_diary_name">Input name</string>

    <!-- FishBun strings -->
    <string name="photo_choose_limit_reached">Selection full. Deselect an image to choose another.</string>
    <string name="photo_choose_title">Album</string>
    <string name="photo_choose_all_views_title">All views</string>

    <!-- banner ad id -->
    <string name="banner1">ca-app-pub-3081053917792975/9330399843</string>
    <string name="banner2">ca-app-pub-3081053917792975/8437471645</string>
    <string name="banner3">ca-app-pub-3081053917792975/2851964866</string>
    <string name="banner4">ca-app-pub-3081053917792975/7124389977</string>

    <string name="native_banner1">ca-app-pub-3081053917792975/8153598286</string>
    
    <!-- Notifications -->
    <string name="notify_title_plural">You have several</string>
    <string name="notify_items_remain_plural">things to do</string>
    <string name="notify_title_single">You have only 1 thing to do! Tap to open daily list</string>

    <string name="notify_message_plural">Here they are:</string>
    <string name="notify_message_ending_plural1">And</string>
    <string name="notify_message_ending_plural2">more. Tap to open</string>


    <string name="notify_message_single">Here it is:</string>



</resources>