<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/settings"
        android:title="@string/settings_btn"/>
    <item
        android:id="@+id/about"
        android:title="@string/about_btn" />
    <item
        android:id="@+id/search_view"
        android:icon="@drawable/ic_baseline_search_32"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/star"
        android:icon="@drawable/ic_baseline_star_border_32"
        android:title="@string/sample"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>