<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/settings"
        android:title="@string/settings_btn"/>
    <item
        android:id="@+id/about"
        android:title="@string/about_btn" />
    <item
        android:id="@+id/search_view"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />
    <item
        android:id="@+id/star"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/sample"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>