<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imageButton_color_note"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/color_choose_button"
                android:contentDescription="@string/sample"
                app:layout_constraintEnd_toStartOf="@+id/delete_photo_button_note"
                app:layout_constraintStart_toEndOf="@+id/photo_button_note"
                app:layout_constraintTop_toBottomOf="@+id/imageView_note"
                app:srcCompat="@android:drawable/ic_menu_compass" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView_note"
                android:layout_width="182dp"
                android:layout_height="182dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/description"
                android:src="@mipmap/ic_launcher_round"
                app:civ_border_color="#DD8D15"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/photo_button_note"
                android:layout_width="145dp"
                android:layout_height="47dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_click_effect_photo1"
                android:text="@string/photo_choose"
                android:textColor="#352E35"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_note" />

            <Button
                android:id="@+id/delete_photo_button_note"
                android:layout_width="145dp"
                android:layout_height="47dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_click_effect_cancel1"
                android:text="@string/delete_btn"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.939"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_note" />

            <Button
                android:id="@+id/button_save_note"
                android:layout_width="128dp"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/button_click_effect1"
                android:text="@string/button_save"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_note"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/edit_text_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_text_note"
                android:importantForAutofill="no"
                android:inputType="textAutoComplete"
                android:padding="@dimen/small_padding"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_note" />

            <EditText
                android:id="@+id/edit_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_note"
                android:importantForAutofill="no"
                android:inputType="textAutoComplete"
                android:maxLength="14"
                android:padding="@dimen/small_padding"
                android:textSize="18sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton_color_note" />

            <Button
                android:id="@+id/button_cancel_note"
                android:layout_width="128dp"
                android:layout_height="44dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/button_click_effect_cancel1"
                android:text="@string/cancel_btn"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_note"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>