<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="20dp"
    app:cardCornerRadius="20dp"
    app:cardPreventCornerOverlap="false"
    android:foreground="?android:attr/selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imageView_mic"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_below="@+id/imageView"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:layout_toEndOf="@+id/imageView"
            android:contentDescription="@string/sample"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton_delete"
            app:srcCompat="@android:drawable/ic_btn_speak_now" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logo"
            android:visibility="visible"
            app:civ_border_color="@color/primary_color_dark1"
            app:civ_border_width="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="@string/description"
            android:textColor="#939596"
            android:fontFamily="@font/ubuntu_regular"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/editText_name" />

        <TextView
            android:id="@+id/editText_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="@string/sample"
            android:fontFamily="@font/ubuntu_regular"
            android:textColor="#000"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginTop="48dp"
            android:layout_toEndOf="@+id/imageView"
            android:contentDescription="@string/sample"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageButton
            android:id="@+id/imageButton_options"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/sample"
            app:layout_constraintEnd_toStartOf="@+id/imageButton_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_outline_settings_32" />

        <ImageButton
            android:id="@+id/imageButton_delete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/sample"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_close_32" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/expandable_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                android:id="@+id/full_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/sample"
                android:textColor="#000"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/full_description"
                app:layout_constraintTop_toBottomOf="@+id/last_edit_date_text2" />

            <TextView
                android:id="@+id/full_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/description_full"
                android:textColor="#000"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_edit_date_text" />

            <TextView
                android:id="@+id/creation_date_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/sample"
                android:textColor="#000"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/creation_date_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/last_edit_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/last_edit_date"
                android:textColor="#000"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/creation_date_text" />

            <TextView
                android:id="@+id/last_edit_date_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/sample"
                android:textColor="#000"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/last_edit_date_text"
                app:layout_constraintTop_toBottomOf="@+id/creation_date_text2" />

            <TextView
                android:id="@+id/creation_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/creation_date"
                android:textColor="#000"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>